Duong submitted homework

--- a/Homeworks/HW1/Students/test_1_by_Duong.ipynb
+++ b/Homeworks/HW1/Students/test_1_by_Duong.ipynb
@@ -98,7 +98,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bài 3. Tổng Chữ Số"
+    "## Bài 3. Hình tứ giác\n",
+    "Dương khum biết nàm test với Class như nào :')"
    ]
   },
   {
@@ -106,29 +107,13 @@
    "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def test3(func):\n",
-    "    \n",
-    "    test_cases = [\n",
-    "        {\"inp\": 1234, \"out\": 10},\n",
-    "        {\"inp\": 1111, \"out\": 4},\n",
-    "        {\"inp\": 1212, \"out\": 6},\n",
-    "        {\"inp\": 9876, \"out\": 30},\n",
-    "        {\"inp\": 1000, \"out\": 1},\n",
-    "        {\"inp\": 2021, \"out\": 5},\n",
-    "    ]\n",
-    "    \n",
-    "    def condition_func(func, case):\n",
-    "        return func(case['inp']) == case['out']\n",
-    "    \n",
-    "    test(test_cases, func, condition_func)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bài 4. Thứ Trong Tuần"
+    "## Bài 4. Kiểm tra số nguyên\n"
    ]
   },
   {
@@ -140,48 +125,16 @@
     "def test4(func):\n",
     "    \n",
     "    test_cases = [\n",
-    "        {\"inp\": 2, \"out\": \"Monday\"},\n",
-    "        {\"inp\": 3, \"out\": \"Tuesday\"},\n",
-    "        {\"inp\": 4, \"out\": \"Wednesday\"},\n",
-    "        {\"inp\": 5, \"out\": \"Thursday\"},\n",
-    "        {\"inp\": 6, \"out\": \"Friday\"},\n",
-    "        {\"inp\": 7, \"out\": \"Saturday\"},\n",
-    "        {\"inp\": 8, \"out\": \"Sunday\"},\n",
+    "        {\"inp\": 2, \"out\": \"Integer\"},\n",
+    "        {\"inp\": 3.14, \"out\": \"Not integer\"},\n",
+    "        {\"inp\": 4, \"out\": \"Integer\"},\n",
+    "        {\"inp\": 5, \"out\": \"Integer\"},\n",
+    "        {\"inp\": -1.02, \"out\": \"Not integer\"},\n",
+    "        {\"inp\": 111111, \"out\": \"Integer\"},\n",
     "    ]\n",
     "    \n",
     "    def condition_func(func, case):\n",
     "        return func(case['inp']) == case['out']\n",
-    "    \n",
-    "    test(test_cases, func, condition_func)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bài 5. Tìm Dãy Con"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test5(func):\n",
-    "    \n",
-    "    test_cases = [\n",
-    "        {\"inp\": [\"abcabcc\", \"c\"], \"out\": 2},\n",
-    "        {\"inp\": [\"abcabcc\", \"cab\"], \"out\": 2},\n",
-    "        {\"inp\": [\"abcabcc\", \"cabb\"], \"out\": -1},\n",
-    "        {\"inp\": [\"a\", \"a\"], \"out\": 0},\n",
-    "        {\"inp\": [\"a\", \"b\"], \"out\": -1},\n",
-    "        {\"inp\": [\"weofhowihfoewewopwfoiewhoi\", \"hoi\"], \"out\": 23},\n",
-    "        {\"inp\": [\"Test substring\", \"t s\"], \"out\": 3},\n",
-    "    ]\n",
-    "    \n",
-    "    def condition_func(func, case):\n",
-    "        return func(case['inp'][0], case['inp'][1]) == case['out']\n",
     "    \n",
     "    test(test_cases, func, condition_func)"
    ]
