Van submitted homework and lab01

--- a/Homeworks/HW1/Students/truongvan_hw1/test_1_by_Duong.ipynb
+++ b/Homeworks/HW1/Students/truongvan_hw1/test_1_by_Duong.ipynb
@@ -6,12 +6,13 @@
    "source": [
     "## <center>Computer Science Intensive Course - MindX</center>\n",
     "![](./assets/logo.png)\n",
-    "# <center>Test Cases 1. ÔN TẬP PYTHON</center>"
+    "# <center>Test Cases 1. HOMEWORK 1</center>\n",
+    "<div style=\"text-align: right\"> Test cases created by Trần Minh Dương </div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bài 1. Ví Dụ"
+    "## Bài 1. Họ và tên"
    ]
   },
   {
@@ -54,15 +55,14 @@
     "def test1(func):\n",
     "    \n",
     "    test_cases = [\n",
-    "        {\"inp\": \"\", \"out\": \"\"},\n",
-    "        {\"inp\": \" \", \"out\": \" \"},\n",
-    "        {\"inp\": \"a\", \"out\": \"A\"},\n",
-    "        {\"inp\": \"welcome\", \"out\": \"WELCOME\"},\n",
-    "        {\"inp\": \"some TEST\", \"out\": \"SOME TEST\"},\n",
+    "        {\"inp\": ['Dương','Minh','Trần'], \"out\": \"Trần Minh Dương\"},\n",
+    "        {\"inp\": ['Việt','Quang','Ngô'], \"out\": \"Ngô Quang Việt\"},\n",
+    "        {\"inp\": ['Trung','Đức','Trần'], \"out\": \"Trần Đức Trung\"},\n",
+    "        {\"inp\": ['Vân','Thị','Trương'], \"out\": \"Trương Thị Vân\"},\n",
     "    ]\n",
     "    \n",
     "    def condition_func(func, case):\n",
-    "        return func(case['inp']) == case['out']\n",
+    "        return func(case['inp'][0], case['inp'][1],case['inp'][2]) == case['out']\n",
     "    \n",
     "    test(test_cases, func, condition_func)"
    ]
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bài 2. Đường Chéo Hình Vuông"
+    "## Bài 2. Số lớn thứ hai"
    ]
   },
   {
@@ -82,10 +82,14 @@
    "source": [
     "def test2(func):\n",
     "    \n",
-    "    test_cases = [1, 2, 5, 10, 100, 1000, 100000000000]\n",
+    "    test_cases = [\n",
+    "        {\"inp\": [3,[1,2,3]], \"out\": 2},\n",
+    "        {\"inp\": [4,[5,1,4,12]], \"out\": 5},\n",
+    "        {\"inp\": [2,[10,10]], \"out\": \"Not found\"},\n",
+    "    ]\n",
     "    \n",
     "    def condition_func(func, case):\n",
-    "        return func(case) == math.sqrt(2)*case\n",
+    "        return func(case['inp'][0],case['inp'][1]) == case['out']\n",
     "    \n",
     "    test(test_cases, func, condition_func)"
    ]
@@ -94,37 +98,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bài 3. Tổng Chữ Số"
+    "## Bài 3. Hình tứ giác\n",
+    "Dương khum biết nàm test với Class như nào :')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def test3(func):\n",
-    "    \n",
-    "    test_cases = [\n",
-    "        {\"inp\": 1234, \"out\": 10},\n",
-    "        {\"inp\": 1111, \"out\": 4},\n",
-    "        {\"inp\": 1212, \"out\": 6},\n",
-    "        {\"inp\": 9876, \"out\": 30},\n",
-    "        {\"inp\": 1000, \"out\": 1},\n",
-    "        {\"inp\": 2021, \"out\": 5},\n",
-    "    ]\n",
-    "    \n",
-    "    def condition_func(func, case):\n",
-    "        return func(case['inp']) == case['out']\n",
-    "    \n",
-    "    test(test_cases, func, condition_func)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bài 4. Thứ Trong Tuần"
+    "## Bài 4. Kiểm tra số nguyên\n"
    ]
   },
   {
@@ -136,13 +125,12 @@
     "def test4(func):\n",
     "    \n",
     "    test_cases = [\n",
-    "        {\"inp\": 2, \"out\": \"Monday\"},\n",
-    "        {\"inp\": 3, \"out\": \"Tuesday\"},\n",
-    "        {\"inp\": 4, \"out\": \"Wednesday\"},\n",
-    "        {\"inp\": 5, \"out\": \"Thursday\"},\n",
-    "        {\"inp\": 6, \"out\": \"Friday\"},\n",
-    "        {\"inp\": 7, \"out\": \"Saturday\"},\n",
-    "        {\"inp\": 8, \"out\": \"Sunday\"},\n",
+    "        {\"inp\": 2, \"out\": \"Integer\"},\n",
+    "        {\"inp\": 3.14, \"out\": \"Not integer\"},\n",
+    "        {\"inp\": 4, \"out\": \"Integer\"},\n",
+    "        {\"inp\": 5, \"out\": \"Integer\"},\n",
+    "        {\"inp\": -1.02, \"out\": \"Not integer\"},\n",
+    "        {\"inp\": 111111, \"out\": \"Integer\"},\n",
     "    ]\n",
     "    \n",
     "    def condition_func(func, case):\n",
@@ -150,42 +138,11 @@
     "    \n",
     "    test(test_cases, func, condition_func)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bài 5. Tìm Dãy Con"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def test5(func):\n",
-    "    \n",
-    "    test_cases = [\n",
-    "        {\"inp\": [\"abcabcc\", \"c\"], \"out\": 2},\n",
-    "        {\"inp\": [\"abcabcc\", \"cab\"], \"out\": 2},\n",
-    "        {\"inp\": [\"abcabcc\", \"cabb\"], \"out\": -1},\n",
-    "        {\"inp\": [\"a\", \"a\"], \"out\": 0},\n",
-    "        {\"inp\": [\"a\", \"b\"], \"out\": -1},\n",
-    "        {\"inp\": [\"weofhowihfoewewopwfoiewhoi\", \"hoi\"], \"out\": 23},\n",
-    "        {\"inp\": [\"Test substring\", \"t s\"], \"out\": 3},\n",
-    "    ]\n",
-    "    \n",
-    "    def condition_func(func, case):\n",
-    "        return func(case['inp'][0], case['inp'][1]) == case['out']\n",
-    "    \n",
-    "    test(test_cases, func, condition_func)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -199,11 +156,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "a42ccb73e7d9bfdf27e036f1d2b8b681e55fc0743cc5586bc2474d4a60f4b886"
+    "hash": "2043299c89c8cd0b4d1a6f5cf4529bd58e6a4e0fe3181a25e0d328c821cdc5c5"
    }
   }
  },
