--- a/Homeworks/HW2/Students/minhduong_hw2/duong.ipynb
+++ b/Homeworks/HW2/Students/minhduong_hw2/duong.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style='color:blue'>Bai 1</h1>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -52,6 +59,48 @@
     "print(perfectNumber_v2(6))        \n",
     "\n",
     "# O(n*1/2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style = 'color: red'>Bai 2</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorialSum(n):\n",
+    "    s = 0\n",
+    "    multiplier = 1 \n",
+    "    \n",
+    "    adder = 1\n",
+    "    \n",
+    "    for _ in range(n):\n",
+    "        s+=adder\n",
+    "        multiplier+=1\n",
+    "        adder*=multiplier\n",
+    "        \n",
+    "    \n",
+    "    return s\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(factorialSum(3))    \n",
+    "\n",
+    "#O(n)"
    ]
   }
  ],
