--- a/Homeworks/HW2/Students/minhduong_hw2/duong.ipynb
+++ b/Homeworks/HW2/Students/minhduong_hw2/duong.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "def perfectNumber_v2(n):\n",
     "    s = 0\n",
-    "    for i in range(1,(int(n**0.5)+1)):\n",
+    "    for i in range(1,(int(n//2)+1)):\n",
     "        if n % i ==0:\n",
     "            s+=i\n",
     "    \n",
