--- a/Homeworks/HW2/Students/Tran Duc Trung buoi2/Tran Duc Trung.ipynb
+++ b/Homeworks/HW2/Students/Tran Duc Trung buoi2/Tran Duc Trung.ipynb
@@ -35,29 +35,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
     }
    ],
    "source": [
     "#bai2\n",
     "def sum_giai_thua(n):\n",
-    "    sum_num = 0\n",
-    "    for i in range(n+1):\n",
-    "        for y in range(i+1):\n",
-    "            y *= y\n",
-    "        sum_num += i\n",
-    "    return sum_num"
+    "    multiplier = 1\n",
+    "    arr = []\n",
+    "    for i in range(1,n+1):\n",
+    "        multiplier = 1\n",
+    "        for y in range(1,i+1):\n",
+    "            multiplier *= y\n",
+    "        arr.append(multiplier)\n",
+    "    return sum(arr)\n",
+    "\n",
+    "print(sum_giai_thua(3))"
    ]
   }
  ],
