--- a/Labs/Lab02/Students/Tran Duc Trung Lab2/Lab 2. Giới thiệu về Thuật toán và Cấu trúc dữ liệu.ipynb
+++ b/Labs/Lab02/Students/Tran Duc Trung Lab2/Lab 2. Giới thiệu về Thuật toán và Cấu trúc dữ liệu.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,19 +43,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_symmetric(inp):\n",
-    "    pass"
+    "    inp = list(inp)\n",
+    "    arr = []\n",
+    "    check_arr1 = []\n",
+    "    check_arr2 = []\n",
+    "    for i in inp:\n",
+    "        arr.append(i)\n",
+    "    for ele1 in arr:\n",
+    "        check_arr1.append(ele1)\n",
+    "    for ele2 in reversed(arr):\n",
+    "        check_arr2.append(ele2)\n",
+    "    if check_arr1 == check_arr2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 9 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -85,19 +116,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_super_prime(num):\n",
-    "    pass"
+    "    temp = 10\n",
+    "    for i in range(len(str(num))):\n",
+    "        for y in range(2,num):\n",
+    "            if num % y == 0:\n",
+    "                return False\n",
+    "        num //= temp ** i\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 12 cases.\n",
+      "- Test 1 FAILED: Wrong Answer.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 FAILED: Wrong Answer.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "- Test 11 PASSED.\n",
+      "- Test 12 PASSED.\n",
+      "Some test failed. Maybe check some code?\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -126,19 +184,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
     "def get_triangle_type(a, b, c):\n",
-    "    pass"
+    "    if a + b > c and a + c > b and b + c >a:\n",
+    "        if a*a + b*b == c*c or a*a + c*c == b*b or b*b + c*c == a*a:\n",
+    "            return 2\n",
+    "        elif a == b or a==c or c==b:\n",
+    "            return 1\n",
+    "        elif (a^2+b^2-c^2)/(2*a*b) > math.cos(90):\n",
+    "            return 3\n",
+    "        else:\n",
+    "            return 1\n",
+    "    else:\n",
+    "        return 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 13 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "- Test 11 FAILED: Wrong Answer.\n",
+      "- Test 12 PASSED.\n",
+      "- Test 13 PASSED.\n",
+      "Some test failed. Maybe check some code?\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -168,19 +259,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_switches(arr):\n",
-    "    pass"
+    "    count_true = 0\n",
+    "    count_false = 0\n",
+    "    for i in arr:\n",
+    "        if i == True:\n",
+    "            count_true += 1\n",
+    "        elif i == False:\n",
+    "            count_false += 1\n",
+    "    if count_true > count_false:\n",
+    "        return count_false\n",
+    "    elif count_true < count_false:\n",
+    "        return count_true\n",
+    "    else: return count_true"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -197,7 +318,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +332,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b96a0b596e0878a9b961bc6c06a2e9009bb9d1396e6a1dd9debb12e621035262"
+   }
   }
  },
  "nbformat": 4,
