truong van submit

--- a/Labs/Lab02/Students/truongvan_lab02/truongvan_lab02.ipynb
+++ b/Labs/Lab02/Students/truongvan_lab02/truongvan_lab02.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,8 +146,8 @@
     "    result = 0\n",
     "    if a+b > c and a+c > b and b+c > a:\n",
     "        cosA = (b**2 + c**2 - a**2)/(2*b*c)\n",
-    "        cosB = (a**2 + c**2 - c**2)/(a*c)\n",
-    "        cosC = (b**2 + a**2 - c**2)/(a*b)\n",
+    "        cosB = (a**2 + c**2 - c**2)/(2*a*c)\n",
+    "        cosC = (b**2 + a**2 - c**2)/(2*a*b)\n",
     "        if (math.acos(cosA) == math.pi/2) or (math.acos(cosB) == math.pi/2) or (math.acos(cosC) == math.pi/2):\n",
     "            result = 2\n",
     "        elif (math.acos(cosA) < math.pi/2) and (math.acos(cosB) < math.pi/2) and (math.acos(cosC) < math.pi/2):\n",
@@ -161,9 +161,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 13 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "- Test 11 PASSED.\n",
+      "- Test 12 PASSED.\n",
+      "- Test 13 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
