--- a/Homeworks/HW4/Students/duong_hw4/duong_hw4.ipynb
+++ b/Homeworks/HW4/Students/duong_hw4/duong_hw4.ipynb
@@ -29,20 +29,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pprint\n",
+    "pp = pprint.PrettyPrinter()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Vinamilk Icecream', 'Chocolate']\n"
+     ]
+    }
+   ],
+   "source": [
     "def timhang(ds,giatien):\n",
-    "    result = []\n",
-    "    for i,sp in enumerate(ds):\n",
-    "        if sp['price'] == giatien:\n",
-    "            result.append(sp)\n",
+    "    data = {}\n",
+    "    for i in ds:\n",
+    "        if i['price'] not in data:\n",
+    "            data[i['price']] = [i['name']]\n",
+    "        else:\n",
+    "            data[i['price']].append(i['name'])    \n",
     "    \n",
-    "    if len(result) == 0:\n",
-    "        return \"Not found\"\n",
-    "    else:\n",
-    "        return result        \n",
+    "    # pp.pprint(data) \n",
+    "    return data[giatien] if giatien in data else 'Not Found'\n",
     "\n",
     "\n",
     "list1 = [\n",
@@ -51,7 +69,8 @@
     "    {\"id\": 354, \"name\": \"Vinamilk Icecream\", \"price\": 35000},\n",
     "    {\"id\": 77, \"name\": \"Chocolate\", \"price\": 35000},\n",
     "    {\"id\": 1, \"name\": \"Meat\", \"price\": 50000}\n",
-    "]    "
+    "]    \n",
+    "pp.pprint(timhang(list1,35000))"
    ]
   }
  ],
