--- a/Labs/Lab04/Lab 4. Thuật Toán Tìm Kiếm.ipynb
+++ b/Labs/Lab04/Lab 4. Thuật Toán Tìm Kiếm.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def count_word(inp_str, inp_word):\n",
-    "    pass"
+    "def count_word(str, word):\n",
+    "    lst = []\n",
+    "    for word in str.split():\n",
+    "        sol = ''\n",
+    "        for char in word:\n",
+    "            adder += char.lower()\n",
+    "        lst.append(sol)    \n",
+    "    return lst.count(str.lower())"
    ]
   },
   {
@@ -64,6 +70,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "- Test 10 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -94,15 +126,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def reduce_fraction(a, b):\n",
-    "    pass"
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def ucln(a,b):\n",
+    "    if (b == 0):\n",
+    "        return a;\n",
+    "    return ucln(b, a % b);\n",
+    "\n",
+    "def reduce_fraction(a, b):\n",
+    "    print(int(a/ucln(a,b)))\n",
+    "    print(int(b/ucln(a,b)))\n",
+    "\n",
+    "# em không hiểu yêu cầu bài này cho lắm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "1\n",
+      "1\n",
+      "An exception occured at test 1: 'NoneType' object is not subscriptable.\n",
+      "1\n",
+      "2\n",
+      "An exception occured at test 2: 'NoneType' object is not subscriptable.\n",
+      "2\n",
+      "1\n",
+      "An exception occured at test 3: 'NoneType' object is not subscriptable.\n",
+      "1\n",
+      "2\n",
+      "An exception occured at test 4: 'NoneType' object is not subscriptable.\n",
+      "3\n",
+      "10\n",
+      "An exception occured at test 5: 'NoneType' object is not subscriptable.\n",
+      "5\n",
+      "1\n",
+      "An exception occured at test 6: 'NoneType' object is not subscriptable.\n",
+      "7\n",
+      "20\n",
+      "An exception occured at test 7: 'NoneType' object is not subscriptable.\n",
+      "93809\n",
+      "938634\n",
+      "An exception occured at test 8: 'NoneType' object is not subscriptable.\n",
+      "60606061\n",
+      "93691964\n",
+      "An exception occured at test 9: 'NoneType' object is not subscriptable.\n",
+      "999999999\n",
+      "983279828\n",
+      "An exception occured at test 10: 'NoneType' object is not subscriptable.\n",
+      "Some test failed. Maybe check some code?\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -137,19 +225,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fibonacci(n):\n",
-    "    pass"
+    "    if n == 1 or n == 2:\n",
+    "       return 1\n",
+    "    return fibonacci(n-1) + fibonacci(n-2)\n",
+    "def fibo(n):\n",
+    "   return fibonacci(n)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 12 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -210,7 +317,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -224,7 +331,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
+   }
   }
  },
  "nbformat": 4,
