--- a/Homeworks/HW5/Students/tran duc trung buoi 5/Homework 5. Thuật Toán Sắp Xếp (1).ipynb
+++ b/Homeworks/HW5/Students/tran duc trung buoi 5/Homework 5. Thuật Toán Sắp Xếp (1).ipynb
@@ -60,7 +60,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -74,11 +74,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "b96a0b596e0878a9b961bc6c06a2e9009bb9d1396e6a1dd9debb12e621035262"
+    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
    }
   }
  },
