--- a/Labs/Lab05/Students/duong_lab05.ipynb
+++ b/Labs/Lab05/Students/duong_lab05.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,73 +300,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-99999999.0, -1000.0, -12.2, -12.2, 0.0, 3.14159, 20.0, 50.2, 90.12, ]\n"
+      "[-99999999.0, -1000.0, -12.2, -12.2, 0.0, 3.14159, 20.0, 50.2, 90.12]\n"
      ]
     }
    ],
    "source": [
-    "class ListNode:\n",
-    "   def __init__(self, data, next = None):\n",
-    "      self.val = data\n",
-    "      self.next = next\n",
-    "   def calculate_modulo(num):\n",
-    "      a,b = num\n",
-    "      return (a**2 + b**2)**0.5\n",
+    "\n",
+    "def merge_lists(arr1, arr2):\n",
+    "   arr1.extend(arr2)\n",
+    "   arr1.sort()\n",
+    "   return arr1\n",
     "   \n",
-    "def make_list(elements):\n",
-    "      head = ListNode(elements[0])\n",
-    "      for element in elements[1:]:\n",
-    "         ptr = head\n",
-    "         while ptr.next:\n",
-    "            ptr = ptr.next\n",
-    "         ptr.next = ListNode(element)\n",
-    "      return head\n",
-    "def print_list(head):\n",
-    "   ptr = head\n",
-    "   print('[', end = \"\")\n",
-    "   while ptr:\n",
-    "      print(ptr.val, end = \", \")\n",
-    "      ptr = ptr.next\n",
-    "   print(']')\n",
-    "class Solution:\n",
-    "   def merge_lists(arr1, arr2):\n",
-    "      arr1.extend(arr2)\n",
-    "      arr1.sort()\n",
-    "      return arr1\n",
-    "   def mergeTwoLists(self, l1, l2):\n",
-    "      \"\"\"\n",
-    "      :type l1: ListNode\n",
-    "      :type l2: ListNode\n",
-    "      :rtype: ListNode\n",
-    "      \"\"\"\n",
-    "      if not l1:\n",
-    "         return l2\n",
-    "      if not l2:\n",
-    "         return l1\n",
-    "      if(l1.val<=l2.val):\n",
-    "         l1.next = self.mergeTwoLists(l1.next,l2)\n",
-    "         return l1\n",
-    "      else:\n",
-    "         l2.next = self.mergeTwoLists(l1,l2.next)\n",
-    "         return l2\n",
-    "      \n",
-    "head1 = make_list([-99999999.0, -12.2, 0.0, 20.0, 50.2, 90.12])\n",
-    "head2 = make_list([-1000.0, -12.2, 3.14159])\n",
-    "ob1 = Solution()\n",
-    "head3 = ob1.mergeTwoLists(head1,head2)\n",
-    "print_list(head3)"
+    "print(merge_lists([-99999999.0, -12.2, 0.0, 20.0, 50.2, 90.12],[-1000.0, -12.2, 3.14159]))   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +348,7 @@
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
-    "test4(Solution.merge_lists)"
+    "test4(merge_lists)"
    ]
   },
   {
