--- a/Labs/Lab05/Lab 5. Thuật Toán Sắp Xếp (1).ipynb
+++ b/Labs/Lab05/Lab 5. Thuật Toán Sắp Xếp (1).ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,19 +34,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sort_descending_list(inp_list):  \n",
-    "    pass"
+    "    max = -1\n",
+    "    for i in range(len(inp_list)//2):\n",
+    "        inp_list[i], inp_list[max] = inp_list[max], inp_list[i]\n",
+    "        max -= 1\n",
+    "    return inp_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 9 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 PASSED.\n",
+      "- Test 3 PASSED.\n",
+      "- Test 4 PASSED.\n",
+      "- Test 5 PASSED.\n",
+      "- Test 6 PASSED.\n",
+      "- Test 7 PASSED.\n",
+      "- Test 8 PASSED.\n",
+      "- Test 9 PASSED.\n",
+      "CONGRATULATIONS! All test cases passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -159,19 +181,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def merge_lists(arr1, arr2):\n",
-    "    pass"
+    "    length1 = len(arr1)\n",
+    "    length2 = len(arr2)\n",
+    "    arr1.extend(arr2)\n",
+    "    for i in range(1, len(arr1)):  # arr[i] is the element to be inserted\n",
+    "        j = i\n",
+    "        while j > 0 and arr1[j] < arr1[j-1]:  # move the element to the left until found the correct position\n",
+    "            arr1[j], arr1[j-1] = arr1[j-1], arr1[j]\n",
+    "            j -= 1\n",
+    "    return arr1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-99999999.0, -1000.0, -12.2, -12.2, 0.0, 3.14159, 20.0, 50.2, 90.12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = [-99999999.0, -12.2, 0.0, 20.0, 50.2, 90.12]\n",
+    "arr2 = [-1000.0, -12.2, 3.14159]\n",
+    "print(merge_lists(arr1, arr2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 10 cases.\n",
+      "- Test 1 PASSED.\n",
+      "- Test 2 FAILED: Wrong Answer.\n",
+      "- Test 3 FAILED: Wrong Answer.\n",
+      "- Test 4 FAILED: Wrong Answer.\n",
+      "- Test 5 FAILED: Wrong Answer.\n",
+      "- Test 6 FAILED: Wrong Answer.\n",
+      "- Test 7 FAILED: Wrong Answer.\n",
+      "- Test 8 FAILED: Wrong Answer.\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -188,7 +253,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3.10.4 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -202,11 +267,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "1d0df3a001fc651470c855a5f152c71fa21be151a45d55dedf9376bb83f3db8f"
+    "hash": "03ee9ebc61fb24b4d29b1ef01f2ca513d3106518665cb0b5c92a24a88b5dc21d"
    }
   }
  },
