--- a/Homeworks/HW6/Homework 6. Thuật Toán Sắp Xếp (2).ipynb
+++ b/Homeworks/HW6/Homework 6. Thuật Toán Sắp Xếp (2).ipynb
@@ -29,7 +29,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -43,7 +43,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1d0df3a001fc651470c855a5f152c71fa21be151a45d55dedf9376bb83f3db8f"
+   }
   }
  },
  "nbformat": 4,
