--- a/Labs/Lab06/Students/duonglab06/duong.ipynb
+++ b/Labs/Lab06/Students/duonglab06/duong.ipynb
@@ -89,7 +89,19 @@
    "outputs": [],
    "source": [
     "def partition_mid(arr):\n",
-    "    pass"
+    "    mid = (len(arr)-1)//2\n",
+    "    pivot = arr[mid]\n",
+    "    i = mid\n",
+    "    for j in range(0, len(arr)):\n",
+    "        if (arr[j] > pivot and mid >j) or (arr[j] < pivot and mid <j):\n",
+    "            i += 1\n",
+    "            arr[mid], arr[j] = arr[j], arr[mid] \n",
+    "            mid = j\n",
+    "            \n",
+    "    arr[i], arr[mid] = arr[mid], arr[i]\n",
+    "    return arr\n",
+    "\n",
+    "print(partition_mid([5, 9, 1, 12, 30, 35, 75, 10, 15, 20, 4, 0, 20, 0, 20, 3, 6, 14]))"
    ]
   },
   {
@@ -201,7 +213,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -215,7 +227,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.1"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1d0df3a001fc651470c855a5f152c71fa21be151a45d55dedf9376bb83f3db8f"
+   }
   }
  },
  "nbformat": 4,
