--- a/Labs/Lab06/Students/duonglab06/duong.ipynb
+++ b/Labs/Lab06/Students/duonglab06/duong.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,31 +84,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def partition_mid(arr):\n",
-    "    mid = (len(arr)-1)//2\n",
-    "    pivot = arr[mid]\n",
-    "    i = mid\n",
-    "    for j in range(0, len(arr)):\n",
-    "        if (arr[j] > pivot and mid >j) or (arr[j] < pivot and mid <j):\n",
-    "            i += 1\n",
-    "            arr[mid], arr[j] = arr[j], arr[mid] \n",
-    "            mid = j\n",
-    "            \n",
-    "    arr[i], arr[mid] = arr[mid], arr[i]\n",
-    "    return arr\n",
+    "def quicksort(sequence, low, high):\n",
+    "    if low < high:\n",
+    "        pivot = partition(sequence, low, high)\n",
+    "        quicksort(sequence, low, pivot - 1)\n",
+    "        quicksort(sequence, pivot + 1, high)\n",
     "\n",
-    "print(partition_mid([5, 9, 1, 12, 30, 35, 75, 10, 15, 20, 4, 0, 20, 0, 20, 3, 6, 14]))"
+    "def partition_mid(sequence):\n",
+    "    low = 0\n",
+    "    high = len(sequence)-1\n",
+    "    sequence[low],sequence[(low+high)//2] = sequence[(low+high)//2],sequence[low] #change\n",
+    "    pivot = sequence[low]\n",
+    "    i = low + 1\n",
+    "    for j in range(low + 1, high + 1):\n",
+    "        if sequence[j] < pivot:\n",
+    "            sequence[j], sequence[i] = sequence[i], sequence[j]\n",
+    "            i += 1\n",
+    "    sequence[i-1], sequence[low] = sequence[low], sequence[i-1]\n",
+    "    return sequence\n",
+    "\n",
+    "# arr = [5, 9, 1, 12, 30, 35, 75, 10, 15, 20, 4, 0, 20, 0, 20, 3, 6, 14]\n",
+    "# print(partition_mid(arr,0,len(arr)-1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing on 9 cases.\n",
+      "An exception occured at test 1: too many indices for array: array is 0-dimensional, but 1 were indexed.\n",
+      "An exception occured at test 2: too many values to unpack (expected 2).\n",
+      "An exception occured at test 3: too many values to unpack (expected 2).\n",
+      "An exception occured at test 4: too many values to unpack (expected 2).\n",
+      "An exception occured at test 5: too many values to unpack (expected 2).\n",
+      "An exception occured at test 6: too many values to unpack (expected 2).\n",
+      "An exception occured at test 7: too many values to unpack (expected 2).\n",
+      "An exception occured at test 8: too many values to unpack (expected 2).\n",
+      "An exception occured at test 9: too many values to unpack (expected 2).\n",
+      "Some test failed. Maybe check some code?\n"
+     ]
+    }
+   ],
    "source": [
     "# !!! DO NOT MODIFY THIS CELL\n",
     "# Check result on test cases\n",
@@ -213,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.1 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -227,11 +252,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "1d0df3a001fc651470c855a5f152c71fa21be151a45d55dedf9376bb83f3db8f"
+    "hash": "b2b9efa92f2bdac4bfda25c60f3f7d6c779c80601382838fe4225a699a59d380"
    }
   }
  },
